# SignalBeta

./: .gitignore  Cargo.toml  Dockerfile  Makefile  docker-compose.yml
common/src/: frame_buffer.rs
kernel/: x86_64-unknown-elf.json
kernel/.cargo/: config.toml
kernel/src/: main.rs
uefi/: Cargo.toml
uefi/src/: elf.rs  error.rs  fs.rs  main.rs
